<resources>
    <string name="app_name">NusArt</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">lets discover Indonesian paintings with us</string>
    <string name="title_welcome_page">Welcome to NusArt</string>
    <string name="title_signup_page">Input Your Biodata</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Input first your data</string>
    <string name="title_login_page">Are you ready for art Nusantara?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="or">OR</string>
    <string name="avatar_paint">avatar_paint</string>
    <string name="paint_name">Nama lukisan :</string>
    <string name="jenis_lukisan">Jenis lukisan :</string>
    <string name="searchbar_hint">Search Painter</string>

    <string name="email_login">Email</string>
    <string name="pass_login">Password</string>
    <string name="title_signup">Sign Up</string>
    <string name="desc_signup">Silahkan lengkapi data berikut</string>

    <string name="login_buttonpage">Masuk</string>
    <string name="title_login">Login</string>
    <string name="desc_login">Silahkan isi email dan password \n untuk login</string>
    <string name="signup_buttonpage">Daftar</string>
    <string name="signup_msg_bottom">Sudah punya akun?</string>
    <string name="signup_msg_bottom2">Masuk</string>
    <string name="login_msg_bottom">Belum punya akun?</string>
    <string name="login_msg_bottom2">Daftar</string>

    <string name="home_navtext">Home</string>
    <string name="camera_navtext">Camera</string>
    <string name="Map_navtext">Map</string>
    <string name="Profile_navtext">Profile</string>

    <string name="mau_cari">Mau Cari lukisan apa hari ini?</string>
    <string name="name_paint">Monalisa</string>

    <string name="iv2_content_desc_item">Foto Lukisan</string>

    <string name="iv1_content_desc_language">Kembali ke profile</string>
    <string name="btn1_content_desc_language">Ganti Bahasa Indonesia</string>
    <string name="btn2_content_desc_language">Ganti Bahasa Inggris</string>
    <string name="btn3_content_desc_language">Ganti bahasa Jepang</string>
    <string name="btn4_content_desc_language">Ganti Bahasa Arab</string>
    <string name="btn5_content_desc_language">Ganti Bahasa Germany</string>
    <string name="btn6_content_desc_language">Ganti bahasa France</string>

    <string name="tv_indonesia_language">Indonesia</string>
    <string name="tv_English_language">Inggris</string>
    <string name="tv_Japan_language">Japan</string>
    <string name="tv_Arab_language">Arab</string>
    <string name="tv_Germany_language">Germany</string>
    <string name="tv_France_language">France</string>

    <string name="login_tit_dialog">Login Berhasil</string>
    <string name="login_con_dialog">Ceritakanlah cerita seremmu itu!!!</string>

    <string name="login_tit_dialogerr">Login Gagal</string>
    <string name="login_con_dialogerr">Coba cek lagi Email &amp; Password kamu yaa!!!</string>

    <string name="profile_appbar">Profil saya</string>
    <string name="tv_profile">User</string>

    <string name="registration_success">Registrasi Berhasil</string>
    <string name="registration_createacc_success">Akun berhasil dibuat!</string>
    <string name="registration_failed">Registrasi Gagal</string>
    <string name="registration_email_already_haveacc">Email sudah terdaftar!</string>

    <string name="edit_profile_appbar">Edit Profile</string>
    <string name="edit_profile_username">Username</string>
    <string name="edit_profile_nohp">No Hp</string>
    <string name="edit_profile_gender">Jenis Kelamin</string>
    <string name="edit_profile_address">Alamat</string>
    <string name="edit_profile_submit">Submit</string>
    <string name="btn_submit_edit_profile">Tekan untuk submit data</string>

    <string name="favorite_title">Favorit</string>
    <string name="item_txt_loading">Sesi Expired</string>
    <string name="item_btn_loading">Coba Lagi</string>

    <string name="to_favorite">Ke halaman Favorite</string>

    <string name="change_language">Ganti Bahasa</string>
    <string name="languange_settings">Ganti Bahasa</string>
    <string name="logout_app">Keluar Aplikasi</string>
    <string name="iv1_content_desc_profile">Foto Profil User</string>
    <string name="btn1_content_desc_profile">Mengganti Bahasa</string>
    <string name="btn2_content_desc_profile">keluar Aplikasi</string>

    <string name="btn_zoomin_map">+</string>
    <string name="btn_zoomout_map">-</string>
    <string name="btnback_map">Kembali</string>

    <string name="logout_alert">Yakin ingin melakukan Logout?</string>
    <string name="logout_title">Keluar</string>

</resources>