<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    android:id="@+id/ini_fragment_profile"
    tools:context=".user_ui_page.ui.profile.ProfileFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/appBarList"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/color_secondary">

                <TextView
                    android:id="@+id/txt_profileappbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:fontFamily="@font/font3_poppins_semibold"
                    android:text="@string/profile_appbar"
                    />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_profile"
            android:layout_below="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:id="@+id/iv_fotoprofil"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/baseline_account_circle_24"
                android:contentDescription="@string/iv1_content_desc_profile"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="10dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_fotoprofil"
                />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_fotoprofil"
                android:layout_marginStart="150dp"
                android:layout_marginEnd="150dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/font4_comic"
                android:gravity="center"
                android:text="@string/tv_profile"
                android:textAlignment="center"
                android:textColor="@color/color_secondary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_fotoprofil" />

            <Button
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/languange_settings"
                android:contentDescription="@string/btn1_content_desc_profile"
                android:background="@drawable/bg_color_inithird"
                android:fontFamily="@font/font5_poppinsbold"
                app:layout_constraintTop_toBottomOf="@id/tv_username"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/logout_app"
                android:contentDescription="@string/btn2_content_desc_profile"
                android:background="@drawable/bg_color_inithird"
                android:fontFamily="@font/font5_poppinsbold"
                app:layout_constraintTop_toBottomOf="@id/btn_language"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>