<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui_page.language.LanguageActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/txt_edit_profile_appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font3_poppins_semibold"
        android:text="@string/change_language"
        android:layout_marginTop="28sp"
        android:layout_marginStart="54dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="600dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_primary">

            <LinearLayout
                android:id="@+id/linearlayout3_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2_language">

                <ImageView
                    android:id="@+id/imageViewjepang"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/jepang" />

                <TextView
                    android:id="@+id/textViewjepang"
                    android:layout_width="22dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_jepang"
                    android:layout_width="190dp"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_color_btn"
                    android:fontFamily="@font/font5_poppinsbold"
                    android:contentDescription="@string/btn3_content_desc_language"
                    android:text="@string/tv_Japan_language"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1_language">

                <ImageView
                    android:id="@+id/imageViewunitedstates"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/unitedstates" />

                <TextView
                    android:id="@+id/textViewunitedstates"
                    android:layout_width="22dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_unitedstates"
                    android:layout_width="190dp"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_color_btn"
                    android:fontFamily="@font/font5_poppinsbold"
                    android:contentDescription="@string/btn2_content_desc_language"
                    android:text="@string/tv_English_language"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewindonesia"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/indonesia" />

                <TextView
                    android:id="@+id/textViewindonesia"
                    android:layout_width="22dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_indonesia"
                    android:layout_width="190dp"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_color_btn"
                    android:fontFamily="@font/font5_poppinsbold"
                    android:contentDescription="@string/btn1_content_desc_language"
                    android:text="@string/tv_indonesia_language"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Linearlayout4_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearlayout3_language">

                <ImageView
                    android:id="@+id/imageViewArab"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/arab_flag" />

                <TextView
                    android:id="@+id/textViewArab"
                    android:layout_width="22dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_arab"
                    android:layout_width="190dp"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_color_btn"
                    android:fontFamily="@font/font5_poppinsbold"
                    android:contentDescription="@string/btn4_content_desc_language"
                    android:text="@string/tv_Arab_language"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Linearlayout5_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Linearlayout4_language">

                <ImageView
                    android:id="@+id/imageViewGerman"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/german_flag" />

                <TextView
                    android:id="@+id/textViewGerman"
                    android:layout_width="22dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_German"
                    android:layout_width="190dp"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_color_btn"
                    android:fontFamily="@font/font5_poppinsbold"
                    android:contentDescription="@string/btn5_content_desc_language"
                    android:text="@string/tv_Germany_language"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout6_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Linearlayout5_language">

                <ImageView
                    android:id="@+id/imageViewFrance"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/france_flag" />

                <TextView
                    android:id="@+id/textViewFrance"
                    android:layout_width="22dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_France"
                    android:layout_width="190dp"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_color_btn"
                    android:fontFamily="@font/font5_poppinsbold"
                    android:contentDescription="@string/btn6_content_desc_language"
                    android:text="@string/tv_France_language"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>